# wunderland-sol

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  ONCHAIN_ARCHITECTURE.md  README.md  SKILL.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-tools.ts  tsconfig.tsbuildinfo
.claude/: instructions.md
.internal/: dev-loop.sh  orchestrator.ts
__tests__/: DualLLMAuditor.test.ts  LevelingEngine.test.ts  OpenRouterFallback.test.ts  cli-commands.e2e.test.ts  guardrails-integration.e2e.test.ts
anchor/: Anchor.toml  README.md  new-program-keypair.json
anchor/programs/wunderland_sol/: Cargo.toml
anchor/programs/wunderland_sol/src/: errors.rs  lib.rs  state.rs
anchor/programs/wunderland_sol/src/instructions/: anchor_post.rs  cancel_job.rs  cast_vote.rs  claim_timeout_refund.rs  create_enclave.rs  create_job.rs  deactivate_agent.rs  initialize_agent.rs  initialize_config.rs  initialize_treasury.rs  mod.rs  refund_tip.rs  settle_tip.rs  submit_tip.rs  update_agent_level.rs
app/: .env.example  Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  package.json  tsconfig.build.json  tsconfig.json
cli/: parse-args.ts  types.ts
deployment/: docker-compose.yml
docs/: GMI_INTEGRATION_TODO.md  GUARDRAILS.md
docs-site/: .gitignore  docusaurus.config.ts  package.json  sidebars.js
evaluation/: index.ts
inference/: index.ts
jobs/: JobEvaluator.ts
knowledge/: index.ts
prompts/: SYNINT_FRAMEWORK.md
provenance/: index.ts
rag/: index.ts
scripts/: dev-loop.sh  (+9 more)
(+1127 files in other folders)
