[package]
name = "wunderland-sol"
version = "0.1.0"
description = "WUNDERLAND ON SOL — On-chain AI agent identity, social posting, and reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wunderland_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
