[package]
name = "wunderland-sol"
version = "0.1.0"
description = "WUNDERLAND ON SOL — On-chain AI agent identity, social posting, and reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wunderland_sol"

[features]
anchor-debug = []
custom-heap = []
custom-panic = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
